[gd_scene load_steps=11 format=3 uid="uid://c5n8m2lap4j1x"]

[ext_resource type="Script" uid="uid://d1k72kyxu4km6" path="res://scripts/ui/toolbar.gd" id="1_toolbar"]
[ext_resource type="FontFile" uid="uid://dcwhex08vx2qh" path="res://assets/fonts/pixelFont-7-8x14-sproutLands.ttf" id="2_j4jut"]
[ext_resource type="Texture2D" uid="uid://qpjk74nnrjkq" path="res://assets/UI/Sprite sheets/buttons/Plus Normal.png" id="3_7r4a7"]
[ext_resource type="Texture2D" uid="uid://blfp2ulh8v3c5" path="res://assets/UI/Sprite sheets/buttons/Plus Hover.png" id="4_7r4a7"]
[ext_resource type="Texture2D" uid="uid://cog8s5v4c4r4y" path="res://assets/UI/Sprite sheets/buttons/Documentation normal.png" id="5_ne8ky"]
[ext_resource type="Texture2D" uid="uid://conufg2q0ymg4" path="res://assets/UI/Sprite sheets/buttons/Documentation.png" id="6_pr1jq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pr1jq"]
texture = ExtResource("3_7r4a7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lcige"]
texture = ExtResource("4_7r4a7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ne8ky"]
texture = ExtResource("5_ne8ky")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cicof"]
texture = ExtResource("6_pr1jq")

[node name="Toolbar" type="HBoxContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1916.0
offset_top = 5.0
offset_right = -1776.0
offset_bottom = 45.0
grow_horizontal = 0
script = ExtResource("1_toolbar")

[node name="CodeEditorButton" type="Button" parent="."]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
tooltip_text = "Open Code Editor (Ctrl+1)"
theme_override_fonts/font = ExtResource("2_j4jut")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxTexture_pr1jq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lcige")
theme_override_styles/hover = SubResource("StyleBoxTexture_lcige")
theme_override_styles/focus = SubResource("StyleBoxTexture_pr1jq")

[node name="ReadmeButton" type="Button" parent="."]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
tooltip_text = "Open Documentation (Ctrl+2)"
theme_override_styles/normal = SubResource("StyleBoxTexture_ne8ky")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cicof")
theme_override_styles/hover = SubResource("StyleBoxTexture_cicof")
theme_override_styles/focus = SubResource("StyleBoxTexture_ne8ky")

[node name="SkillTreeButton" type="Button" parent="."]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
tooltip_text = "Open Skill Tree (Ctrl+3)"
text = "ðŸŒ³"
